cluster/apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: gluetun-config
              mountPath: /gluetun
          ports:
            - containerPort: 8080
              name: webui
            - containerPort: 6881
              name: torrent-tcp
            - containerPort: 6881
              protocol: UDP
              name: torrent-udp
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            exec:
              command:
                - ping
                - -c
                - "1"
                - www.google.com
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5

        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            exec:
              command:
                - ping
                - -c
                - "1"
                - www.google.com
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads-pvc
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: qbittorrent-gluetun-config-pvc
