cluster/apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: webui
    - port: 6881
      targetPort: 6881
      protocol: TCP
      name: torrent-tcp
    - port: 6881
      targetPort: 6881
      protocol: UDP
      name: torrent-udp
  selector:
    app.kubernetes.io/name: qbittorrent
