cluster/apps/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Qbittorrent Web UI
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Management
    gethomepage.dev/icon: sh-qbittorrent
    gethomepage.dev/name: Qbittorrent
    gethomepage.dev/pod-selector: app.kubernetes.io/name=qbittorrent
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - qbt.internal.gustend.net
      secretName: qbt-internal-gustend-net-cert
  rules:
    - host: qbt.internal.gustend.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
